components and props

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Food App</title>
+    <link rel="stylesheet" href="/src/css/Food-App.css">
+
 </head>
 <body>
     <div id="root">
         <h1>Not Rendered.</h1>
     </div>
 </body>
+<script type="module" src="/src/js/Food-App.js"></script>
 </html>
